--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Studio</title> 
+<link rel="stylesheet" href="./styles.css"
 </head>
 
 <body>
@@ -106,7 +107,48 @@
             </li>
         </ul>
     </section>
-    
+ 
+    <section id="ourportfolio">
+        <h2>Our Portfolio</h2>
+        <ul>
+            <li>
+                <img src="./images/banking-app-img-01.jpg" alt="Banking app photo"
+                width="360"
+                height="420">
+                <h3>Banking App</h3>
+                <p>
+                App
+                </p>
+            </li>
+            <li>
+                <img src="./images/cashless-payment-img-02.jpg" alt="Cashless payment photo"
+                width="360"
+                height="420">
+                <h3>Cashless Payment</h3>
+                <p>
+                Marketing
+                </p>
+            </li>
+            <li>
+                <img src="./images/meditation-app-img-03.jpg" alt="Meditation app photo"
+                width="360"
+                height="420">
+                <h3>Meditation App</h3>
+                <p>
+                App
+                </p>
+            </li>
+            <li>
+                <img src="./images/taxi-service-img-04.jpg" alt="Taxi service photo"
+                width="360"
+                height="420">
+                <h3>Taxi Service</h3>
+                <p>
+                Marketing
+                </p>
+            </li>
+        </ul>
+    </section>
 </main>  
 
 <footer>
