--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Studio</title> 
-<link rel="stylesheet" href="./styles.css"
+<link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -143,6 +143,24 @@
                 width="360"
                 height="420">
                 <h3>Taxi Service</h3>
+                <p>
+                Marketing
+                </p>
+            </li>
+            <li>
+                <img src="./images/screen-illustrations-img-05.jpg" alt="Screen Illustrations"
+                width="360"
+                height="420">
+                <h3>Screen Illustrations</h3>
+                <p>
+                Design
+                </p>
+            </li>
+            <li>
+                <img src="./images/online-courses-img-06.jpg" alt="A woman happily watches her phone"
+                width="360"
+                height="420">
+                <h3>Online Courses</h3>
                 <p>
                 Marketing
                 </p>
