--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 rel="stylesheet">
 
  
-<link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="./CSS/styles.css">
 </head>
 
 <body>
@@ -38,37 +38,37 @@ rel="stylesheet">
     </address>
   </header>
 <main> 
-    <section id="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+    <section class="hero-section">
+        <h1 class="h1-hero-section">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
     </section>
 
     <section id="features">
         <h2>Features</h2>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
+        <ul class="features-list">
+            <li class="features-item">
+                <h3 class="heading-03">Strategy</h3>
                 <p> 
                     Our goal is to identify the business 
                     problem to walk away with the perfect and creative solution. 
                 </p>
             </li>
-            <li>
-                <h3>Punctuality</h3>
+            <li class="features-item">
+                <h3 class="heading-03">Punctuality</h3>
                 <p>
                     Bring the key message to the brand's audience for 
                     the best price within the shortest possible time.
                 </p>
             </li>
-            <li> 
-                <h3>Diligence</h3>
+            <li class="features-item"> 
+                <h3 class="heading-03">Diligence</h3>
                 <p>
                     Research and confirm brands with the strongest 
                     digital growth opportunities and minimize risk.
                 </p>
-            </li>
+            </li class="features-item">
             <li> 
-                <h3>Technologies</h3>
+                <h3 class="heading-03">Technologies</h3>
                 <p>
                     Design practice focused on digital experiences. 
                     We bring forth a deep passion for problem-solving.
@@ -78,40 +78,40 @@ rel="stylesheet">
         </ul>
     </section>
     <section id="ourteam">
-        <h2>Our Team</h2>
-        <ul>
-            <li>
+        <h2 class="heading-02">Our Team</h2>
+        <ul class="our-team-list">
+            <li class="our-team-member">
                 <img src="./images/mark_g_image.jpg" alt="Mark's photo" 
                 width="264"
                 height="380">
-                 <h3>Mark Guerrero</h3>
+                 <h3 class="heading-03">Mark Guerrero</h3>
                  <p>
                     Product Designer
                 </p>
             </li>
-            <li>
+            <li class="our-team-member">
                 <img src="./images/tom_ford_img.jpg" alt="Tom's photo"
                 width="264"
                 height="380">
-                 <h3>Tom Ford</h3>
+                 <h3 class="heading-03">Tom Ford</h3>
                  <p>
                     Frontend Developer
                  </p>
-            </li>
+            </li class="our-team-member">
             <li>
                 <img src="./images/camilla_g_img.jpg" alt="Camila's photo"
                 width="264"
                 height="380">
-                 <h3>Camila Garcia</h3>
+                 <h3 class="heading-03">Camila Garcia</h3>
                  <p>
                     Marketing
                  </p>
             </li>
-            <li>
+            <li class="our-team-member">
                 <img src="./images/daniel_w_img.jpg" alt="Daniel's photo"
                 width="264"
                 height="380">
-                 <h3>Daniel Wilson</h3>
+                 <h3 class="hea">Daniel Wilson</h3>
                  <p>
                  UI Designer
                  </p>
@@ -119,14 +119,14 @@ rel="stylesheet">
         </ul>
     </section>
  
-    <section id="ourportfolio">
-        <h2>Our Portfolio</h2>
+    <section class="our-portfolio">
+        <h2 class="heading-02">Our Portfolio</h2>
         <ul>
             <li>
                 <img src="./images/banking-app-img-01.jpg" alt="Banking app photo"
                 width="360"
                 height="420">
-                <h3>Banking App</h3>
+                <h3 class="heading-03">Banking App</h3>
                 <p>
                 App
                 </p>
@@ -135,7 +135,7 @@ rel="stylesheet">
                 <img src="./images/cashless-payment-img-02.jpg" alt="Cashless payment photo"
                 width="360"
                 height="420">
-                <h3>Cashless Payment</h3>
+                <h3 class="heading-03">Cashless Payment</h3>
                 <p>
                 Marketing
                 </p>
@@ -144,7 +144,7 @@ rel="stylesheet">
                 <img src="./images/meditation-app-img-03.jpg" alt="Meditation app photo"
                 width="360"
                 height="420">
-                <h3>Meditation App</h3>
+                <h3 class="heading-03">Meditation App</h3>
                 <p>
                 App
                 </p>
@@ -153,7 +153,7 @@ rel="stylesheet">
                 <img src="./images/taxi-service-img-04.jpg" alt="Taxi service photo"
                 width="360"
                 height="420">
-                <h3>Taxi Service</h3>
+                <h3 class="heading-03">Taxi Service</h3>
                 <p>
                 Marketing
                 </p>
@@ -162,7 +162,7 @@ rel="stylesheet">
                 <img src="./images/screen-illustrations-img-05.jpg" alt="Screen Illustrations"
                 width="360"
                 height="420">
-                <h3>Screen Illustrations</h3>
+                <h3 class="heading-03">Screen Illustrations</h3>
                 <p>
                 Design
                 </p>
@@ -171,7 +171,7 @@ rel="stylesheet">
                 <img src="./images/online-courses-img-06.jpg" alt="A woman happily watches her phone"
                 width="360"
                 height="420">
-                <h3>Online Courses</h3>
+                <h3 class="heading-03">Online Courses</h3>
                 <p>
                 Marketing
                 </p>
@@ -186,3 +186,5 @@ rel="stylesheet">
         with digital marketing & growth solutions.
      </p>
 </footer>
+
+</body>
