--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ rel="stylesheet">
                     Research and confirm brands with the strongest 
                     digital growth opportunities and minimize risk.
                 </p>
-            </li class="features-item">
-            <li> 
+            </li>
+            <li class="features-item"> 
                 <h3 class="heading-03">Technologies</h3>
                 <p>
                     Design practice focused on digital experiences. 
@@ -97,8 +97,8 @@ rel="stylesheet">
                  <p>
                     Frontend Developer
                  </p>
-            </li class="our-team-member">
-            <li>
+            </li>
+            <li class="our-team-member">
                 <img src="./images/camilla_g_img.jpg" alt="Camila's photo"
                 width="264"
                 height="380">
@@ -180,9 +180,9 @@ rel="stylesheet">
     </section>
 </main>  
 
-<footer>
-    <a href="./index.html">WebStudio</a> <br />
-     <p>Increase the flow of customers and sales for your business
+<footer class="page-footer">
+    <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+     <p class="footer-text">Increase the flow of customers and sales for your business
         with digital marketing & growth solutions.
      </p>
 </footer>
