--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ rel="stylesheet">
   </header>
 <main> 
     <section class="hero-section">
-        <h1 class="h1-hero-section">Effective Solutions for Your Business</h1>
+        <h1 class="heading-hero-section">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
     </section>
 
