--- a/index.html
+++ b/index.html
@@ -44,31 +44,31 @@ rel="stylesheet">
     </section>
 
     <section id="features">
-        <h2>Features</h2>
+        <h2 class="heading-two">Features</h2>
         <ul class="features-list">
             <li class="features-item">
-                <h3 class="heading-03">Strategy</h3>
+                <h3 class="heading-three">Strategy</h3>
                 <p> 
                     Our goal is to identify the business 
                     problem to walk away with the perfect and creative solution. 
                 </p>
             </li>
             <li class="features-item">
-                <h3 class="heading-03">Punctuality</h3>
+                <h3 class="heading-three">Punctuality</h3>
                 <p>
                     Bring the key message to the brand's audience for 
                     the best price within the shortest possible time.
                 </p>
             </li>
             <li class="features-item"> 
-                <h3 class="heading-03">Diligence</h3>
+                <h3 class="heading-three">Diligence</h3>
                 <p>
                     Research and confirm brands with the strongest 
                     digital growth opportunities and minimize risk.
                 </p>
             </li>
             <li class="features-item"> 
-                <h3 class="heading-03">Technologies</h3>
+                <h3 class="heading-three">Technologies</h3>
                 <p>
                     Design practice focused on digital experiences. 
                     We bring forth a deep passion for problem-solving.
@@ -77,14 +77,14 @@ rel="stylesheet">
             
         </ul>
     </section>
-    <section id="ourteam">
-        <h2 class="heading-02">Our Team</h2>
+    <section class="our-team">
+        <h2 class="heading-two">Our Team</h2>
         <ul class="our-team-list">
             <li class="our-team-member">
                 <img src="./images/mark_g_image.jpg" alt="Mark's photo" 
                 width="264"
                 height="380">
-                 <h3 class="heading-03">Mark Guerrero</h3>
+                 <h3 class="heading-three">Mark Guerrero</h3>
                  <p>
                     Product Designer
                 </p>
@@ -93,7 +93,7 @@ rel="stylesheet">
                 <img src="./images/tom_ford_img.jpg" alt="Tom's photo"
                 width="264"
                 height="380">
-                 <h3 class="heading-03">Tom Ford</h3>
+                 <h3 class="heading-three">Tom Ford</h3>
                  <p>
                     Frontend Developer
                  </p>
@@ -102,7 +102,7 @@ rel="stylesheet">
                 <img src="./images/camilla_g_img.jpg" alt="Camila's photo"
                 width="264"
                 height="380">
-                 <h3 class="heading-03">Camila Garcia</h3>
+                 <h3 class="heading-three">Camila Garcia</h3>
                  <p>
                     Marketing
                  </p>
@@ -111,7 +111,7 @@ rel="stylesheet">
                 <img src="./images/daniel_w_img.jpg" alt="Daniel's photo"
                 width="264"
                 height="380">
-                 <h3 class="hea">Daniel Wilson</h3>
+                 <h3 class="heading-three">Daniel Wilson</h3>
                  <p>
                  UI Designer
                  </p>
@@ -120,13 +120,13 @@ rel="stylesheet">
     </section>
  
     <section class="our-portfolio">
-        <h2 class="heading-02">Our Portfolio</h2>
+        <h2 class="heading-two">Our Portfolio</h2>
         <ul>
             <li>
                 <img src="./images/banking-app-img-01.jpg" alt="Banking app photo"
                 width="360"
                 height="420">
-                <h3 class="heading-03">Banking App</h3>
+                <h3 class="heading-three">Banking App</h3>
                 <p>
                 App
                 </p>
@@ -135,7 +135,7 @@ rel="stylesheet">
                 <img src="./images/cashless-payment-img-02.jpg" alt="Cashless payment photo"
                 width="360"
                 height="420">
-                <h3 class="heading-03">Cashless Payment</h3>
+                <h3 class="heading-three">Cashless Payment</h3>
                 <p>
                 Marketing
                 </p>
@@ -144,7 +144,7 @@ rel="stylesheet">
                 <img src="./images/meditation-app-img-03.jpg" alt="Meditation app photo"
                 width="360"
                 height="420">
-                <h3 class="heading-03">Meditation App</h3>
+                <h3 class="heading-three">Meditation App</h3>
                 <p>
                 App
                 </p>
@@ -153,7 +153,7 @@ rel="stylesheet">
                 <img src="./images/taxi-service-img-04.jpg" alt="Taxi service photo"
                 width="360"
                 height="420">
-                <h3 class="heading-03">Taxi Service</h3>
+                <h3 class="heading-three">Taxi Service</h3>
                 <p>
                 Marketing
                 </p>
@@ -162,7 +162,7 @@ rel="stylesheet">
                 <img src="./images/screen-illustrations-img-05.jpg" alt="Screen Illustrations"
                 width="360"
                 height="420">
-                <h3 class="heading-03">Screen Illustrations</h3>
+                <h3 class="heading-three">Screen Illustrations</h3>
                 <p>
                 Design
                 </p>
@@ -171,7 +171,7 @@ rel="stylesheet">
                 <img src="./images/online-courses-img-06.jpg" alt="A woman happily watches her phone"
                 width="360"
                 height="420">
-                <h3 class="heading-03">Online Courses</h3>
+                <h3 class="heading-three">Online Courses</h3>
                 <p>
                 Marketing
                 </p>
