--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 rel="stylesheet">
 
  
-<link rel="stylesheet" href="./styles/styles.css">
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
