--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@ rel="stylesheet">
         <ul class="features-list">
             <li class="features-item">
                 <h3 class="heading-three">Strategy</h3>
-                <p> 
+                <p class="features-text"> 
                     Our goal is to identify the business 
                     problem to walk away with the perfect and creative solution. 
                 </p>
             </li>
             <li class="features-item">
                 <h3 class="heading-three">Punctuality</h3>
-                <p>
+                <p class="features-text">
                     Bring the key message to the brand's audience for 
                     the best price within the shortest possible time.
                 </p>
             </li>
             <li class="features-item"> 
                 <h3 class="heading-three">Diligence</h3>
-                <p>
+                <p class="features-text">
                     Research and confirm brands with the strongest 
                     digital growth opportunities and minimize risk.
                 </p>
             </li>
             <li class="features-item"> 
                 <h3 class="heading-three">Technologies</h3>
-                <p>
+                <p class="features-text">
                     Design practice focused on digital experiences. 
                     We bring forth a deep passion for problem-solving.
                 </p>
@@ -85,7 +85,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Mark Guerrero</h3>
-                 <p>
+                 <p class="our-team-text">
                     Product Designer
                 </p>
             </li>
@@ -94,7 +94,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Tom Ford</h3>
-                 <p>
+                 <p class="our-team-text">
                     Frontend Developer
                  </p>
             </li>
@@ -103,7 +103,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Camila Garcia</h3>
-                 <p>
+                 <p class="our-team-text">
                     Marketing
                  </p>
             </li>
@@ -112,7 +112,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Daniel Wilson</h3>
-                 <p>
+                 <p class="our-team-text">
                  UI Designer
                  </p>
             </li>
@@ -127,7 +127,7 @@ rel="stylesheet">
                 width="360"
                 height="420">
                 <h3 class="heading-three">Banking App</h3>
-                <p>
+                <p class="our-portfolio-text">
                 App
                 </p>
             </li>
@@ -136,7 +136,7 @@ rel="stylesheet">
                 width="360"
                 height="420">
                 <h3 class="heading-three">Cashless Payment</h3>
-                <p>
+                <p class="our-portfolio-text">
                 Marketing
                 </p>
             </li>
@@ -145,7 +145,7 @@ rel="stylesheet">
                 width="360"
                 height="420">
                 <h3 class="heading-three">Meditation App</h3>
-                <p>
+                <p class="our-portfolio-text">
                 App
                 </p>
             </li>
@@ -163,7 +163,7 @@ rel="stylesheet">
                 width="360"
                 height="420">
                 <h3 class="heading-three">Screen Illustrations</h3>
-                <p>
+                <p class="our-portfolio-text">
                 Design
                 </p>
             </li>
@@ -172,7 +172,7 @@ rel="stylesheet">
                 width="360"
                 height="420">
                 <h3 class="heading-three">Online Courses</h3>
-                <p>
+                <p class="our-portfolio-text">
                 Marketing
                 </p>
             </li>
