--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Mark Guerrero</h3>
-                 <p class="our-team-text">
+                 <p class="our-team-text our-team-bg">
                     Product Designer
                 </p>
             </li>
@@ -94,7 +94,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Tom Ford</h3>
-                 <p class="our-team-text">
+                 <p class="our-team-text our-team-bg">
                     Frontend Developer
                  </p>
             </li>
@@ -103,7 +103,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Camila Garcia</h3>
-                 <p class="our-team-text">
+                 <p class="our-team-text our-team-bg">
                     Marketing
                  </p>
             </li>
@@ -112,7 +112,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Daniel Wilson</h3>
-                 <p class="our-team-text">
+                 <p class="our-team-text our-team-bg">
                  UI Designer
                  </p>
             </li>
@@ -127,7 +127,7 @@ rel="stylesheet">
                 width="360"
                 height="420">
                 <h3 class="heading-three">Banking App</h3>
-                <p class="our-portfolio-text">
+                <p class="our-portfolio-text ">
                 App
                 </p>
             </li>
@@ -154,7 +154,7 @@ rel="stylesheet">
                 width="360"
                 height="420">
                 <h3 class="heading-three">Taxi Service</h3>
-                <p>
+                <p class="our-portfolio-text">
                 Marketing
                 </p>
             </li>
