--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Mark Guerrero</h3>
-                 <p class="our-team-text our-team-bg">
+                 <p class="our-team-text">
                     Product Designer
                 </p>
             </li>
@@ -94,7 +94,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Tom Ford</h3>
-                 <p class="our-team-text our-team-bg">
+                 <p class="our-team-text">
                     Frontend Developer
                  </p>
             </li>
@@ -103,7 +103,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Camila Garcia</h3>
-                 <p class="our-team-text our-team-bg">
+                 <p class="our-team-text">
                     Marketing
                  </p>
             </li>
@@ -112,7 +112,7 @@ rel="stylesheet">
                 width="264"
                 height="380">
                  <h3 class="heading-three">Daniel Wilson</h3>
-                 <p class="our-team-text our-team-bg">
+                 <p class="our-team-text">
                  UI Designer
                  </p>
             </li>
